--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Run play.py",
+            "name": "Python: Run him_play.py",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/scripts/play.py",
+            "program": "${workspaceFolder}/scripts/him_play.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}:/home/ww/robot/unitree_legged_sdk/lib/python/amd64"
+            }
+        },
+        {
+            "name": "Python: Run wtw_play.py",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/scripts/wtw_play.py",
             "console": "integratedTerminal",
             "env": {
                 "PYTHONPATH": "${workspaceFolder}:/home/ww/robot/unitree_legged_sdk/lib/python/amd64"
