--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-        // {
-        //     "name": "Python: Run him_play.py",
-        //     "type": "python",
-        //     "request": "launch",
-        //     "program": "${workspaceFolder}/scripts/him_play.py",
-        //     "console": "integratedTerminal",
-        //     "env": {
-        //         "PYTHONPATH": "${env:PYTHONPATH}:${workspaceFolder}:${workspaceFolder}/sdk/lib/python/amd64",
-        //         "LD_LIBRARY_PATH": "${env:LD_LIBRARY_PATH}:${workspaceFolder}/sdk/lib/cpp/amd64"
-        //     }
-        // },
         {
             "name": "Python: Run wtw_play.py",
             "type": "python",
@@ -19,8 +8,8 @@
             "program": "${workspaceFolder}/scripts/wtw_play.py",
             "console": "integratedTerminal",
             "env": {
-                "PYTHONPATH": "${env:PYTHONPATH}:${workspaceFolder}:${workspaceFolder}/sdk/lib/python/amd64",
-                "LD_LIBRARY_PATH": "${env:LD_LIBRARY_PATH}:${workspaceFolder}/sdk/lib/cpp/amd64"
+                "PYTHONPATH": "${env:PYTHONPATH}:${workspaceFolder}:${workspaceFolder}/3rdparty/aliengo_sdk/lib/python/amd64/:${workspaceFolder}/3rdparty/livox_sdk/lib/python/amd64/",
+                "LD_LIBRARY_PATH": "${env:LD_LIBRARY_PATH}:${workspaceFolder}/3rdparty/aliengo_sdk/lib/cpp/amd64:${workspaceFolder}/3rdparty/livox_sdk/lib/cpp/amd64/"
             }
         }
     ]
